Reduce input width, fix valign and change type to number

--- a/src/optionsPage.css
+++ b/src/optionsPage.css
@@ -6,3 +6,8 @@ html {
     max-width: 30rem;
     background: white;
 }
+
+.input {
+    width: 5em;
+    vertical-align: baseline;
+}
